Shorten 'Supprimer la zone' to bypass css bug :P

--- a/views/sidebar.tt
+++ b/views/sidebar.tt
@@ -41,7 +41,7 @@
                         class="btn btn-danger btn-lg"
                         data-toggle="modal"
                         data-target="#suppressionZoneModal">
-                    Supprimer la zone
+                    Supprimer
                 </button>
 
                 <!-- Modal -->
