--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -17,16 +17,19 @@
 
     <body>
 
-        <% content %>
-
-        <div class="row">
-            <div class="col-sm-8 col-sm-offset-3">
-                <div class="well" id="footer">
-                    Fièrement aidé par <a href="http://perldancer.org/">Dancer</a> <% dancer_version %> ♥<br/>
-                    Le code est disponible <a href="https://github.com/KaneRoot/dnsmanager">ici</a> ! \o/
+        <div class="container">
+            <% content %>
+            
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="well" id="footer">
+                        Fièrement aidé par <a href="http://perldancer.org/">Dancer</a> <% dancer_version %> ♥<br/>
+                        Le code est disponible <a href="https://github.com/KaneRoot/dnsmanager">ici</a> ! \o/
+                    </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- Fin du container footer -->
+
     </body>
 
 </html>
