--- a/views/sidebar.tt
+++ b/views/sidebar.tt
@@ -1,5 +1,5 @@
 <div class="row">
-<div class="col-sm-2 col-sm-offset-1">
+<div class="col-sm-3 col-xs-12">
 
     <div class="panel panel-primary">
         <div class="panel-heading">
