--- a/views/header.tt
+++ b/views/header.tt
@@ -1,17 +1,46 @@
 
 <!-- Fixed navbar -->
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">NetLib.re</a>
-            <p class="navbar-brand">
-            Un nom de domaine gratuit, administrable facilement.
-            </p>
-        </div>
+<nav class="navbar navbar-inverse  navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mobile-menu" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">NetLib.re</a>
+      <span class="navbar-brand hidden-xs">Un nom de domaine gratuit, administrable facilement.</span>
     </div>
-</div>
-<br />
-<br />
-<br />
-<br />
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="mobile-menu">
+      <ul class="nav navbar-nav navbar-right visible-xs">
+        <% IF login.defined %>
+            <li><a href="/user/home">Ma page</a></li>
+            <% IF admin == 1 %>
+                <li><a href="/admin">Administration</a></li>
+            <% END %>
+            <li><a href="/user/logout">Déconnexion</a></li>
+
+        <% ELSE %>
+        <form class="navbar-form"  role="form" action="/user/login" method="post" accept-charset="utf-8">
+            <div class="form-group">
+                <input type="text" name="login" class="form-control input-menu-mobile" id="login" placeholder="Votre identifiant" />
+                <input type="password" name="password" class="form-control input-menu-mobile" id="password" placeholder="Mot de passe" />
+            </div>
+            <button type="submit" class="btn btn-default input-menu-mobile">Connexion &rarr;</button>
+        </form>
+        <% END %>
+
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
+<br />
+<br />
+<br />
+<br />
